# ffmpeg-build-script

./: .gitignore  README.md  build-ffmpeg  build_config.yaml  pyproject.toml
ffmpeg_builder/: __init__.py  __main__.py  app.py  builder.py  components.py  config.py  downloader.py  executor.py  ffmpeg_builder  platform_detect.py  state.py  system_report.py
ffmpeg_builder/docs/: CHANGELOG.md  DeveloperReadme.md  README.md  Windows-UCRT64-Implementation-Plan.md
ffmpeg_builder/profiles/: default.yaml
ffmpeg_builder/ui/: __init__.py  dashboard.py  error_handler.py  screens.py
scripts/: check_python_env.sh  setup_windows_msys2_ucrt64.ps1
