[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ffmpeg-builder"
version = "1.0.0"
description = "Interactive FFmpeg build system with progress tracking and configuration management"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "FFmpeg Builder Team"}
]
keywords = ["ffmpeg", "build", "video", "codec"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Multimedia :: Video",
]

dependencies = [
    "rich>=13.0.0",
    "tqdm>=4.65.0",
    "pyyaml>=6.0",
    "requests>=2.31.0",
    "packaging>=23.0",
    "psutil>=5.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "mypy>=1.0",
]

[project.scripts]
ffmpeg-builder = "ffmpeg_builder.__main__:main"

[project.urls]
Homepage = "https://github.com/ffmpeg-builder/ffmpeg-builder"
Documentation = "https://github.com/ffmpeg-builder/ffmpeg-builder#readme"
Repository = "https://github.com/ffmpeg-builder/ffmpeg-builder"

[tool.setuptools.packages.find]
where = ["."]
include = ["ffmpeg_builder*"]

[tool.black]
line-length = 100
target-version = ['py38']

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
